# SerialCommunication

./: .gitignore  CMakeLists.txt  README.md  install.sh
SerialCommunication/: ApplicationUtilities.cpp  ApplicationUtilities.h  GlobalDefinitions.h  Main.cpp  MessageLogger.cpp  MessageLogger.h
utility/: .SerialCommunication.desktop.skel
